Fix footer <p> spacing, give nav space to breathe
Why I used padding and not margin in the first place!?

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -5,7 +5,7 @@
 	text-align: center;
 
 	nav {
-		margin: 0 auto 1rem;
+		margin: 0 auto 2rem;
 		box-shadow: var(--edge-highlight);
 		border-radius: 22px;
 		background-color: var(--fg-muted-1);
@@ -55,7 +55,7 @@
 		flex-wrap: wrap;
 		justify-content: center;
 		gap: 0.5rem;
-		margin: 0.5rem 0 0;
+		margin: 1rem 0 0;
 		padding: 0;
 
 		li {
@@ -96,15 +96,7 @@
 	}
 
 	p {
-		margin: auto;
-		padding: 0.5rem;
+		margin: 1rem auto;
 		max-width: min(var(--container-width) + 10rem, 90%);
-	}
-
-	details {
-		all: unset;
-		margin: 0 auto;
-		color: var(--fg-muted-5);
-		font-size: 0.875rem;
 	}
 }
